add a responsive version

--- a/01_draw-Macaw/macaw/index.html
+++ b/01_draw-Macaw/macaw/index.html
@@ -11,7 +11,7 @@
   <style>
     html, body, article { height:100%; }
     /* FIX Safari z-index issue */
-    .footer,.fig,.title,.title-bg,.fig__tail,.fig__tree,.fig__macaw,.fig__macaw__wing-right,.fig__macaw__beak,.fig__macaw__feather-top{-webkit-transform: translate3d(0,0,1px);transform: translate3d(0,0,1px);}
+    .footer,.fig,.title,.title-bg,.fig__tail,.fig__tree,.fig__macaw,.fig__macaw__wing-right,.fig__macaw__beak,.fig__macaw__feather-top,.fig-mobile,.fig-m__egg-shell__front,.fig-m__macaw,.fig-m__macaw__feather-top,.fig-m__macaw__beak,.fig-m__egg-shell__back{-webkit-transform: translate3d(0,0,1px);transform: translate3d(0,0,1px);}
     /* FIX Macaw ;) */
     p > a {
       padding:2px 5px;
@@ -31,6 +31,63 @@
         <a href="http://macaw.co/" class="title__bottom--bottom">Macaw</a>
       </div>
       <p class="title__link">an experiment by&nbsp;<a href="https://twitter.com/ngenty">@ngenty</a></p>
+    </div>
+    <div class="fig-mobile centered">
+      <div class="fig-m__egg-shell__front">
+        <div class="fig-m__egg-shell__front--spots">
+          <div class="fig-m__egg-shell__front--spots_01"></div>
+          <div class="fig-m__egg-shell__front--spot_02"></div>
+          <div class="fig-m__egg-shell__front--spot_03"></div>
+          <div class="fig-m__egg-shell__front--spot_04"></div>
+          <div class="fig-m__egg-shell__front--spot_05"></div>
+          <div class="fig-m__egg-shell__front--spot_06"></div>
+          <div class="fig-m__egg-shell__front--spot_07-group">
+            <div class="fig-m__egg-shell__front--spot_07__r"></div>
+            <div class="fig-m__egg-shell__front--spot_07__l"></div>
+          </div>
+          <div class="fig-m__egg-shell__front--spot_0fig-m__egg-shell__front--spot_08"></div>
+        </div>
+        <div class="fig-m__egg-shell__front--edges">
+          <div class="fig-m__egg-shell__front--edges_01"></div>
+          <div class="fig-m__egg-shell__front--edges_02"></div>
+          <div class="fig-m__egg-shell__front--edges_03"></div>
+          <div class="fig-m__egg-shell__front--edges_04"></div>
+          <div class="fig-m__egg-shell__front--edges_05"></div>
+          <div class="fig-m__egg-shell__front--edges_06"></div>
+        </div>
+      </div>
+      <div class="fig-m__macaw">
+        <div class="fig-m__macaw__feather-top">
+          <div class="fig-m__macaw__feather-top__left"></div>
+          <div class="fig-m__macaw__feather-top__top"></div>
+        </div>
+        <div class="fig-m__macaw__eye--pupil">
+          <div class="fig__macaw__eye-reflect">
+            <div class="fig__macaw__eye-reflect-color"></div>
+          </div>
+        </div>
+        <div class="fig-m__macaw__beak">
+          <div class="fig-m__macaw__beak-top"></div>
+          <div id="beak-bottom" class="fig-m__macaw__beak-bottom">
+            <div class="fig-m__macaw__beak-bottom--colors">
+              <div class="fig-m__macaw__beak-bottom--color"></div>
+            </div>
+          </div>
+        </div>
+        <div class="fig-m__macaw__body">
+          <div class="fig-m__macaw__body--abdomen">
+            <div id="head" class="fig-m__macaw__body--head"></div>
+          </div>
+        </div>
+      </div>
+      <div class="fig-m__egg-shell__back">
+        <div class="fig-m__egg-shell__back--edges">
+          <div class="fig-m__egg-shell__back--edges_04"></div>
+          <div class="fig-m__egg-shell__back--edges_03"></div>
+          <div class="fig-m__egg-shell__back--edges_02"></div>
+          <div class="fig-m__egg-shell__back--edges_01"></div>
+        </div>
+      </div>
     </div>
     <div class="fig centered">
       <div class="fig__macaw__tail">
