upd and add files

--- a/00_Macaw-forum-examples/google-font/index.html
+++ b/00_Macaw-forum-examples/google-font/index.html
@@ -6,9 +6,9 @@
   <title>index</title>
   <link rel="stylesheet" href="css/standardize.css">
   <link rel="stylesheet" href="css/index.css">
-  <link href='http://fonts.googleapis.com/css?family=Pacifico-Regular' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
   <style type="text/css" media="screen">
-    h1{font-family: Pacifico;}
+    .title {font-family: Pacifico;}
   </style>
 </head>
 <body class="body page-index clearfix">
